--- a/WPFPageNavigation/View/Products.xaml
+++ b/WPFPageNavigation/View/Products.xaml
@@ -3,10 +3,32 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:WPFPageNavigation.View"
+            xmlns:vm="clr-namespace:WPFPageNavigation.ViewModel"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            
+             d:DesignHeight="600"
+             d:DesignWidth="622"
+             Style="{StaticResource Page_Style}">
+    <UserControl.DataContext>
+        <vm:ProductsVM />
+    </UserControl.DataContext>
+
+    <Grid Margin="15">
+
+        <Border CornerRadius="0,20,20,0">
+            <Border.Background>
+                <ImageBrush ImageSource="/Images/product_page.png"
+                            Stretch="None" />
+            </Border.Background>
+        </Border>
+
+        <TextBlock Text="{Binding ProductAvailability}"
+                   Foreground="#F25E68"
+                   FontSize="12"
+                   HorizontalAlignment="Left"
+                   VerticalAlignment="Center"
+                   FontFamily="/Fonts/#Rubik Medium"
+                   Margin="261,300,0,0" />
+
     </Grid>
 </UserControl>
+
