--- a/WPFPageNavigation/Styles/Button.xaml
+++ b/WPFPageNavigation/Styles/Button.xaml
@@ -1,26 +1,30 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <Style x:Key="BtnStyle" TargetType="RadioButton">
-        <Setter Property="HorizontalAlignment" 
-                Value="Center"/>
+    <Style x:Key="BtnStyle"
+           TargetType="RadioButton">
+
+        <Setter Property="HorizontalAlignment"
+                Value="Center" />
         <Setter Property="VerticalAlignment"
-                Value="Center"/>
+                Value="Center" />
         <Setter Property="Margin"
-                Value="0,5,0,0"/>
+                Value="0,5,0,0" />
 
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="RadioButton">
+
                     <Border x:Name="border"
                             Height="50"
                             Width="228"
                             BorderThickness="0">
+
                         <Border.Background>
-                            <SolidColorBrush x:Name="BorderBackground" 
-                                             Color="#272B2f"/>
-                            
+                            <SolidColorBrush x:Name="BorderBackground"
+                                             Color="#272B2F" />
                         </Border.Background>
+
                         <Grid>
 
                             <Border x:Name="Indicator"
@@ -30,32 +34,38 @@
                                     VerticalAlignment="Center"
                                     Background="#FFFFFF"
                                     Visibility="Collapsed"
-                                    CornerRadius="2"/>
+                                    CornerRadius="2" />
+
                             <ContentPresenter />
 
                         </Grid>
-                        
+
                     </Border>
+
                     <ControlTemplate.Triggers>
 
-                        <Trigger Property="IsMouseOver" 
+                        <Trigger Property="IsMouseOver"
                                  Value="True">
+
                             <Setter Property="Visibility"
                                     TargetName="Indicator"
-                                    Value="Visible"/>
+                                    Value="Visible" />
+
                         </Trigger>
+
                         <EventTrigger RoutedEvent="Border.MouseEnter"
                                       SourceName="border">
+
                             <BeginStoryboard>
                                 <Storyboard>
                                     <ColorAnimation Storyboard.TargetName="BorderBackground"
                                                     Storyboard.TargetProperty="Color"
                                                     From="#272B2F"
                                                     To="#3E434A"
-                                                    Duration="0:0:0.3"/>
+                                                    Duration="0:0:0.3" />
                                 </Storyboard>
                             </BeginStoryboard>
-                            
+
                         </EventTrigger>
 
                         <EventTrigger RoutedEvent="Border.MouseLeave"
@@ -67,32 +77,95 @@
                                                     Storyboard.TargetProperty="Color"
                                                     From="#3E434A"
                                                     To="#272B2F"
-                                                    Duration="0:0:0.3"/>
-
+                                                    Duration="0:0:0.3" />
                                 </Storyboard>
-                                
                             </BeginStoryboard>
-                            
+
                         </EventTrigger>
+
                         <Trigger Property="IsChecked"
                                  Value="True">
+
                             <Setter Property="Background"
                                     TargetName="border"
-                                    Value="#212529"/>
+                                    Value="#212529" />
 
                             <Setter Property="Visibility"
                                     TargetName="Indicator"
-                                    Value="Visible"/>
-
+                                    Value="Visible" />
 
                         </Trigger>
+
                     </ControlTemplate.Triggers>
-                </ControlTemplate>    
+
+                </ControlTemplate>
             </Setter.Value>
-                        
         </Setter>
-                
 
     </Style>
-    
+
+    <ImageBrush x:Key="close_app_def"
+                ImageSource="/Images/shutdown_def.png"
+                Stretch="None" />
+
+    <ImageBrush x:Key="close_app_mo"
+                ImageSource="/Images/shutdown_mo.png"
+                Stretch="None" />
+
+    <Style x:Key="ExitApp"
+           TargetType="{x:Type Button}">
+
+        <Setter Property="Height"
+                Value="40" />
+        <Setter Property="Width"
+                Value="40" />
+        <Setter Property="HorizontalAlignment"
+                Value="Right" />
+        <Setter Property="VerticalAlignment"
+                Value="Top" />
+        <Setter Property="Margin"
+                Value="0,15,15,0" />
+
+        <Setter Property="Template">
+
+            <Setter.Value>
+
+                <ControlTemplate TargetType="{x:Type Button}">
+
+                    <Border x:Name="border"
+                            BorderThickness="0"
+                            Background="{StaticResource close_app_def}">
+
+                    </Border>
+
+                    <ControlTemplate.Triggers>
+
+                        <Trigger Property="IsMouseOver"
+                                 Value="True">
+
+                            <Setter Property="Background"
+                                    TargetName="border"
+                                    Value="{StaticResource close_app_mo}" />
+
+                        </Trigger>
+
+                        <Trigger Property="IsPressed"
+                                 Value="True">
+
+                            <Setter Property="Background"
+                                    TargetName="border"
+                                    Value="{StaticResource close_app_mo}" />
+
+                        </Trigger>
+
+                    </ControlTemplate.Triggers>
+
+                </ControlTemplate>
+
+            </Setter.Value>
+
+        </Setter>
+
+    </Style>
+
 </ResourceDictionary>
